syntax = "proto3";

package currencyconverter;

option go_package = "./proto";

message ConvertRequest {
  double amount = 1;
  string source_currency = 2;
  string target_currency = 3;
}

message ConvertResponse {
  double converted_amount = 1;
}

service CurrencyConverter {
  rpc Convert(ConvertRequest) returns (ConvertResponse);
}
